crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__add_classes_to_s_v_g_element__add_classes_to_svg-2.snap
---
source: crates/oxvg_optimiser/src/jobs/add_classes_to_s_v_g_element.rs
expression: "test_config_default_svg_comment(r#\"{ \"addClassesToSvg\": {\n            \"className\": \"mySvg\"\n        } }\"#,\n\"Should add class when passed as a className String\")?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Should add class when passed as a className String -->
    test
</svg>
